# amber-new

./: .gitignore  Cargo.toml  input.yaml  test.lua
.github/workflows/: tests.yaml
examples/: run.sh
examples/blinker/: input.yaml
examples/uart_multi/: input.yaml  responder.hex
examples/uart_snake/: input.yaml  snake.hex
examples/uart_test/: input.yaml  uart_test.hex
examples/uart_test2/: input.yaml  uart_test2.hex
hex/: blink.hex  blink_pwm.hex  blink_timer.hex  blink_timer_interrupt.hex  sort.hex  uart_test.hex
src/: clock.rs  common.rs  components.rs  events.rs  jit.rs  lua.rs  main.rs  module.rs  module_holder.rs  module_id.rs  multiplexer.rs  parser.rs  pin_state.rs  squeue.rs  system.rs  system_tables.rs  vcd.rs  wiring.rs
src/components/: avr.rs  led.rs  uart_module.rs
src/components/avr/: bit_helpers.rs  io.rs  jit.rs  mcu.rs  regfile.rs  sreg.rs
src/components/avr/io/: gpio.rs  timer16.rs  uart.rs
src/components/avr/jit/: first_pass.rs  instructions.rs
src/components/avr/mcu/: add_sub.rs  bitops.rs  branches.rs  hex.rs  jit.rs  logical.rs  memory_controller.rs  mul.rs  transfer.rs
src/components/avr/mcu/jit/: add_sub.rs  assembly.rs  bitops.rs  branches.rs  instructions.rs  logical.rs  mul.rs  transfer.rs
src/jit/: instructions.rs  target_model.rs
