[package]
name = "amber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
bitvec = "1.0.1"
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
itertools = "0.12.1"
kanal = "0.1.0-pre8"
memmap = "0.7.0"
memoffset = "0.9.0"
once_cell = "1.19.0"
priority-queue = "1.4.0"
ref-cast = "1.0.22"
smallvec = "1.13.1"
tokio = "1.36.0"
